--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </h1>
         <div class="w-100">
             <form class="content-form  d-flex mt-4 ">
-                <input type="text" class="content-input w-75 g-3 py-2 " placeholder="..." required>
+                <input type="text" class="content-input w-75 g-3 py-2 ps-3 " placeholder="..." required>
                 <button class=" content-btn btn-primary text-light d-block   px-4  ms-2">Search...</button>
             </form>
         </div>
